# RingApp

./: .gitignore  Aptfile  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE.txt  Pipfile  Procfile  README.md  manage.py  pyproject.toml  requirements.txt  test_db_data.sql  tests.py  to_comm_map.p
datalog/: souffle_utils.py
datalog/templates/modules/: 1mhyp0rhyp.tmpl  1mhyp1rhyp.tmpl  2mhyp0rhyp.tmpl  standardfacts.tmpl
datalog/templates/rings/: 1hyp.tmpl  2hyp.tmpl  3hyp.tmpl  4hyp.tmpl  metaproplogic.dl  standardfacts.tmpl
dev/: localenv.sh.example
moduleapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
moduleapp/management/commands/: process_module.py
moduleapp/migrations/: 0001_initial.py  0002_add_souffle_columns_to_logic.py  0003_migrate_to_souffle.py  0004_remove_old_columns.py  0005_rename_logic_fields.py  0006_auto_20240203_0314.py  0007_auto_20240208_1246.py
moduleapp/templates/moduleapp/: logic_list.html  module_detail.html  module_list.html  property_detail.html  property_list.html  results.html  search.html
moduleapp/tests/: test_module_souffle.py
ringapp/: AdminUtils.py  LogicUtils.py  SearchUtils.py  SuggestionUtils.py  admin.py  constants.py  feeds.py  forms.py  local_settings.py.example  models.py  routers.py  settings.py  sitemaps.py  tests.py  tests2.py  urls.py  views.py  wsgi.py
ringapp/fixtures/: properties.json
ringapp/legacy/: properties.json  reducedringproperty.json  v1_to_v2.json  v1comm_to_v2.json
ringapp/logs/: activitylog.txt
ringapp/management/commands/: check_ring_consistency.py  compare_rings.py  db_to_data.py  process_metaproperties.py  process_relations.py  process_ring.py
ringapp/migrations/: 0001_initial.py  0002_logic_theorem.py  0003_commlogic_theorem.py  0004_auto_20150113_1936.py  0005_keyword.py  0006_ring_keywords.py  0007_auto_20150116_1532.py  0008_auto_20150116_1755.py  0009_auto_20150116_1759.py  0010_auto_20150116_1918.py  0011_comminvariance.py  0012_faq_glossary.py  0013_test_ring_test_ringproperty.py  0014_auto_20150120_0016.py  0015_auto_20150121_1712.py  0016_auto_20150121_1716.py  0017_auto_20150121_1839.py  0018_auto_20150121_1841.py  0019_auto_20150121_1842.py  0020_auto_20150121_1843.py  0021_auto_20150121_1848.py  0022_auto_20150121_1856.py  0023_auto_20150121_1925.py  0024_auto_20150201_0231.py  0025_ring_reference.py  0026_auto_20150202_0026.py  0027_auto_20150202_0218.py  0028_auto_20150205_0214.py  0029_auto_20150205_0635.py  0030_commring.py  0031_auto_20150322_1626.py  0032_suggestion.py  0033_auto_20160407_1957.py  0034_auto_20160409_1219.py  0035_auto_20160526_0049.py  0036_auto_20160601_1522.py  0037_suggestion_response.py  0038_news.py  0039_auto_20170216_1220.py  0040_auto_20170906_2208.py  (+27 more)
ringapp/static/css/: bootstrap.icon-large.min.css
ringapp/static/favicon/: manifest.json
ringapp/static/js/: dynamic_form.js
ringapp/templates/: base.html
ringapp/templates/_layouts/: base.html
ringapp/templates/admin/: base_site.html  guides.html  index.html  processor.html  utilities.html
ringapp/templates/registration/: activate.html  activation_complete.html  activation_email.html  activation_email.txt  login.html  logout.html  registration_complete.html  registration_form.html
ringapp/templates/ringapp/: about.html  base.html  bergmans-exchange-ring.html  bergmans-right-primitive-ring.html  (+63 more)
ringapp/templatetags/: queryargs.py
ringapp/tests/: test_LogicEngine.py  test_SearchUtils.py  test_endpoints.py  test_ring_souffle.py  test_router.py
web/: admin.py  models.py  views.py
web/migrations/: 0001_initial.py
(+4 files in other folders)
