[tool.poetry]
name = "ringapp"
version = "1.0.0"
description = "Website app for the Database of Ring Theory"
authors = ["rschwiebert <databaseofringtheory@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.6.0"
boto3 = "1.24.0"
dj-database-url = "0.5.0"
Django = "4.2.16"
django-mathfilters = "0.4.0"
django-publications = "1.2.0"
django-ratelimit = "2.0.0"
django-recaptcha = "3.0.0"
django-registration-redux = "2.9"
gunicorn = "23.0.0"
model-mommy = "1.6.0"
mpmath = "1.3.0"
Pillow = "10.3.0"
pytz = "2021.3"
PyYAML = "6.0"
six = "1.11.0"
sqlparse = "0.5.0"
sympy = "1.12"
whitenoise = "5.0.1"
dart-data = {git = "https://github.com/rschwiebert/dart_data.git", rev = "26c7e054441104f5214922bbf1654c255eec26d7"}
psycopg2 = "2.9.3"
django-heroku = "0.3.1"
requests = "^2.32.2"
cryptography = "42.0.8"
pyopenssl = "24.0.0"
wheel = "0.38.1"
certifi = "2024.7.4"
urllib3 = "1.26.19"
tzdata = "^2024.2"
setuptools = "70.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
