[project]
name = "ringapp"
description = "Website app for the Database of Ring Theory"
version = "1.1.0"
authors = [
    { name = "Ryan Schwiebert", email = "databaseofringtheory@gmail.com" }
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "asgiref==3.6.0",
    "boto3==1.42.33",
    "dj-database-url==0.5.0",
    "Django==4.2.30",
    "django-mathfilters==0.4.0",
    "django-publications==1.2.0",
    "django-ratelimit==2.0.0",
    "gunicorn==23.0.0",
    "model-mommy==1.6.0",
    "mpmath==1.3.0",
    "Pillow==12.2.0",
    "pytz==2021.3",
    "PyYAML==6.0",
    "six==1.11.0",
    "sqlparse==0.5.4",
    "sympy==1.12",
    "whitenoise==5.0.1",
    "dart-data @ git+https://github.com/rschwiebert/dart_data.git@add9b23c9ab4044096c421243f16ff04fd2379a5",
    "psycopg2==2.9.3",
    "django-heroku==0.3.1",
    "requests>=2.33.0",
    "cryptography==48.0.1",
    "pyopenssl==26.2.0",
    "wheel==0.46.2",
    "certifi==2024.7.4",
    "urllib3==2.7.0",
    "tzdata>=2024.2",
    "setuptools==83.0.0",
]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ringapp", "moduleapp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
